RbA Build/src/objects/Order_Discount__c.object
<CustomObject>
    <description>Junction from the discount to the order</description>
    <fields>
        <fullName>Bill_to_Contact__c</fullName>
        <formula>Order__r.BillToContact.FirstName + &quot; &quot; +  Order__r.BillToContact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Discounts</relationshipLabel>
        <relationshipName>Order_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in dollars discounted from the order.</description>
        <inlineHelpText>The amount in dollars discounted from the order.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Description__c</fullName>
        <description>The description of the discount</description>
        <formula>Store_Discount__r.Discount__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description of the discount</inlineHelpText>
        <label>Discount Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Processed_Date__c</fullName>
        <label>Discount Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Booking_Date__c</fullName>
        <description>The order&apos;s booking date.</description>
        <formula>Order__r.EffectiveDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The order&apos;s booking date.</inlineHelpText>
        <label>Order Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Revenue_Recognition_Date__c</fullName>
        <description>The date the order was revenue recognized.</description>
        <formula>Order__r.Revenue_Recognized_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date the order was revenue recognized.</inlineHelpText>
        <label>Order Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The discount is applied to this order</description>
        <inlineHelpText>The discount is applied to this order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Discount_Applied</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Discount__c</fullName>
        <description>This field is used by rSuite for custom disounts that are per unit or window or door - its is the custom amount per unit. It is used by rSuite to calculate Discount Amount</description>
        <inlineHelpText>This field is used by rSuite for custom disounts that are per unit or window or door - its is the custom amount per unit. It is used by rSuite to calculate Discount Amount</inlineHelpText>
        <label>Per Unit Discount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique identifier from pivotal</description>
        <externalId>true</externalId>
        <inlineHelpText>unique identifier from pivotal</inlineHelpText>
        <label>Pivotal Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>The sales rep tied to this order discount.</description>
        <formula>Order__r.Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sales rep tied to this order discount.</inlineHelpText>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the order discount.</description>
        <inlineHelpText>The status of the order discount.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Discount__c</fullName>
        <label>Store Discount</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Store_Discount__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Store_Discount__c.Store_Configuration__r.Store__c</field>
                <operation>equals</operation>
                <valueField>$Source.Store_Location__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Store_Discount__c</referenceTo>
        <relationshipLabel>Order Discounts</relationshipLabel>
        <relationshipName>Order_Discounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The store location that is creating this discount.</description>
        <inlineHelpText>The store location that is creating this discount.</inlineHelpText>
        <label>Store Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Discounts</relationshipLabel>
        <relationshipName>Order_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rSuite_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>an identifier used by rSuite to help them manage jobs in the mobile apps - meets RFC 4122 version 4</description>
        <externalId>true</externalId>
        <inlineHelpText>an identifier used by rSuite to help them manage jobs in the mobile apps</inlineHelpText>
        <label>rSuite Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Order Discount</label>
    <nameField>
        <displayFormat>OD-{00000000}</displayFormat>
        <label>Order Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotReapplyCancelledDiscount</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;)</errorConditionFormula>
        <errorMessage>Cannot change an order discount from Cancelled to Applied. Please click &quot;Cancel&quot; to return.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Order_Rule</fullName>
        <active>true</active>
        <description>Cannot add/edit Order Discounts for an Order in Job Closed Status.</description>
        <errorConditionFormula>OR(TEXT(Order__r.Status) == &apos;Job Closed&apos;,
   TEXT(Order__r.Status) == &apos;Cancelled&apos;
)</errorConditionFormula>
        <errorMessage>You can not add or edit a discount for a closed or cancelled order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Cancellation_Order_Rule</fullName>
        <active>true</active>
        <description>Cannot add Order Discounts for an Order in Pending Cancellation Status.</description>
        <errorConditionFormula>AND(TEXT(Order__r.Status) == &apos;Pending Cancellation&apos;,
  ISNULL(CreatedDate)
)</errorConditionFormula>
        <errorMessage>You can not add an order discount to an order pending cancellation.</errorMessage>
    </validationRules>
</CustomObject>